# juicyurls

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
juicyurls/: __init__.py  __main__.py  analyzer.py  cli.py  learning.py  output.py  patterns.py
juicyurls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
